--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "my-project",
-  "version": "0.1.0",
-  "private": true,
+  "name": "jeek-studio",
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-fullpage.js": "^0.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
