--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "fullpage.js": "^3.0.3",
     "vue": "^2.5.17",
     "vue-fullpage.js": "^0.0.6"
   },
