--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "fullpage-vue": "^1.8.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
