--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "animate.css": "^3.7.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "fullpage-vue": "^1.8.2",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
